@@ -4,7 +4,7 @@ INCLUDES = -I../lib/store -I../lib/kofficecore -I../lib/kofficeui \
 LDFLAGS	= $(all_libraries) $(MICO_LDFLAGS) $(KDE_RPATH)
 LDADD = ../lib/kofficeui/libkofficeui.la \
 	../lib/kofficecore/libkofficecore.la ../lib/koml/libkoml.la \
-	../lib/store/libkstore.la -lkparts -lkpartsui -lkom \
+	../lib/store/libkstore.la -lkspell -lkparts -lkpartsui -lkom \
 	$(LIB_KFILE) $(LIB_KIMGIO) -lkdeutil $(LIBMICO) 
 
 ####### Files
